# GPTenterprise

./: .coverage  .gitignore  LICENSE  README.md  README_fr.md  config  lint_test.sh  reqs_black_doc.sh
.github/workflows/: pdoc.yaml  pylint.yaml  tests.yaml
examples/: webgpt.py
python/: pyproject.toml  requirements-docs.in  requirements-docs.txt  requirements-tests.in  requirements-tests.txt  requirements.txt  setup.py
python/gpt_enterprise/: __init__.py  __main__.py  employee.py  enterprise.py  gpt4all_utils.py  gpt_utils.py  llm_utils.py  manager.py  scrum_master.py  team_leader.py  webgpt.py
python/gpt_enterprise/employees_prompts/: dall_e_prompter.txt  disclaimer_generator.txt  prompt_engineer.txt
python/gpt_enterprise/managers_prompts/: manager.txt
python/gpt_enterprise/prompts/compressor/: compress.txt  uncompress.txt
python/gpt_enterprise/prompts/employees/: dall_e_prompter.txt  helpful_employee.txt  subject_prompter.txt  web_developer.txt
python/gpt_enterprise/prompts/managers/: manager.txt  manager_task_rework.txt  scrum_master.txt  team_leader.txt
python/tests/: conftest.py  developer.txt  test_employee.py  test_enterprise.py  test_generate_html.py  test_generate_image.py  test_gpt_utils.py  test_llm_utils.py  test_manager.py  test_scrum_master.py  test_team_leader.py
python/tests/test_files/employees/: employees.txt  employees_malformed_json.txt  employees_wrong_fields.txt  looping_employees.txt
python/tests/test_files/tasks/: looping_tasks.txt  tasks.txt  tasks_malformed_json.txt  tasks_requirements_list.txt  tasks_wrong_fields.txt
(+5 files in other folders)
